[tool.poetry]
name = "buglocalizer"
version = "0.1.0"
description = "Bug localization via bug reports and source code using deep learning"
authors = ["jimmymdugan <jimmymdugan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.1"
torchvision = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
